# encryptor

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  Table.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20230418111639_users.sql  20230418113458_encryption_keys.sql
src-tauri/src/: main.rs
src-tauri/src/cryptography/: crypto.rs
